# anthrologic-ai-hack

./: .gitignore  .python-version  Untitled1.ipynb  clean_tags.ipynb  dspy_experiment.ipynb  dspy_experiment_hackathon.ipynb  loader.py  main.py  multilabel.py  multilabel_experiment.ipynb  pyproject.toml  supervised.ipynb  supervised.py  topics.py
data/: tags.csv  tickets.csv
