[project]
name = "ai-hack"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "bertopic>=0.17.0",
    "dspy>=2.6.16",
    "ibis-framework[duckdb]>=10.4.0",
    "ipython>=9.0.2",
    "jupyter>=1.1.1",
    "keybert>=0.9.0",
    "litellm>=1.63.7",
    "model2vec[distill]>=0.4.1",
    "nltk>=3.9.1",
    "openai>=1.61.0",
    "polars>=1.26.0",
    "seaborn>=0.13.2",
    "setfit>=1.1.2",
    "skrub>=0.5.3",
]
